--- a/NSI/Parcours_Tableau.ipynb
+++ b/NSI/Parcours_Tableau.ipynb
@@ -13,7 +13,8 @@
         "XlsuzfL5tSfG",
         "1brlS_zNozDp",
         "2xYIggRgqzgo"
-      ]
+      ],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -24,6 +25,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/madelvallez/Cours/blob/master/NSI/Parcours_Tableau.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -96,16 +107,23 @@
         "    postcondition : la fonction renvoie l'indice de la plus grande valeur de t\n",
         "    si cette valeur apparaît plusieurs fois dans t, \n",
         "    alors l'indice renvoyé est le plus petit possible\"\"\"\n",
-        "\n",
-        "    return"
+        "    imax=0\n",
+        "    for i in range(len(t)):\n",
+        "        if t[i]>t[imax]:\n",
+        "            imax=i\n",
+        "    return imax"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "g6WVu47OnrQU"
+        "id": "g6WVu47OnrQU",
+        "outputId": "22429aad-23c1-4953-d5b1-8f0a436e371d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "assert indice_du_max([10,50,100,30,70,80]) == 2\n",
@@ -113,8 +131,16 @@
         "assert indice_du_max([10,50,100,30,70,80,3000]) == 6\n",
         "print('tests ok')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tests ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -146,10 +172,13 @@
         "    postcondition : la fonction renvoie l'indice de la plus grande valeur de t\n",
         "    si cette valeur apparaît plusieurs fois dans t, \n",
         "    alors l'indice renvoyé est le plus GRAND possible\"\"\"\n",
-        "    \n",
-        "    return"
+        "    imax=0\n",
+        "    for i in range(len(t)):\n",
+        "        if t[i]>=t[imax]:\n",
+        "            imax=i\n",
+        "    return imax"
       ],
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -196,10 +225,13 @@
         "    postcondition : la fonction renvoie le nombre de cellules du tableau qui \n",
         "    contiennent la valeur v\n",
         "    \"\"\"\n",
-        "\n",
-        "    return "
+        "    occ=0\n",
+        "    for val in t:\n",
+        "        if val == v:\n",
+        "            occ+=1\n",
+        "    return occ"
       ],
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -213,7 +245,7 @@
         "assert nb_occurrences(8, [15,10,13,10,8,15,10]) == 1\n",
         "assert nb_occurrences(7, [15,10,13,10,8,15,10]) == 0"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -247,25 +279,39 @@
         "    du tableau qui contient la valeur v, lorsque cet indice existe.\n",
         "    sinon, la fonction renvoie None\n",
         "    \"\"\"\n",
-        "\n",
-        "    return "
+        "    for i in range(len(t)):\n",
+        "        if t[i] == v:\n",
+        "            return i\n",
+        "    return None"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "j5PrxsVcsqF6"
+        "id": "j5PrxsVcsqF6",
+        "outputId": "462a4f13-79df-40a7-cf99-2eaae18b928b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "assert premiere_occurrence(10, [15,10,13,10,8,15,10]) == 1\n",
         "assert premiere_occurrence(8, [15,10,13,10,8,15,10]) == 4\n",
-        "assert nb_occurrences(7, [15,10,13,10,8,15,10]) == None \n",
+        "assert premiere_occurrence(7, [15,10,13,10,8,15,10]) == None \n",
         "print('tests ok')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tests ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -298,10 +344,14 @@
         "    du tableau qui contient la valeur v, lorsque cet indice existe.\n",
         "    sinon, la fonction renvoie None\n",
         "    \"\"\"\n",
-        "\n",
-        "    return "
+        "    occ=list()\n",
+        "    for i in range(len(t)):\n",
+        "        if t[i] == v:\n",
+        "            occ.append(i)\n",
+        "    if len(occ)>0: return occ[-1]\n",
+        "    return None"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -350,16 +400,26 @@
         "    alors la fonction renvoie celui qui arrive en premier dans le tableau\n",
         "    -si le tableau est vide, alors la fonction renvoie la chaîne vide  ''\n",
         "    \"\"\"\n",
-        "    \n",
-        "    return"
+        "    if len(t)==0: return ''\n",
+        "    len_max=len(t[0])\n",
+        "    max=t[0]\n",
+        "    for i in range(len(t)):\n",
+        "        if len(t[i])>len_max:\n",
+        "            len_max=len(t[i])\n",
+        "            max=t[i]\n",
+        "    return max"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "p5IdjOhQozD0"
+        "id": "p5IdjOhQozD0",
+        "outputId": "bcac80cf-9df8-4636-dbe3-af5041680630",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "assert plus_long_mot(['chien', 'chat', 'tortue', 'éléphant', 'lion']) == 'éléphant'\n",
@@ -367,8 +427,16 @@
         "assert plus_long_mot([]) == ''\n",
         "print('tests ok')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tests ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
