--- a/NSI/Parcours_Tableau.ipynb
+++ b/NSI/Parcours_Tableau.ipynb
@@ -120,10 +120,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "g6WVu47OnrQU",
-        "outputId": "22429aad-23c1-4953-d5b1-8f0a436e371d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "22429aad-23c1-4953-d5b1-8f0a436e371d"
       },
       "source": [
         "assert indice_du_max([10,50,100,30,70,80]) == 2\n",
@@ -291,10 +291,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "j5PrxsVcsqF6",
-        "outputId": "462a4f13-79df-40a7-cf99-2eaae18b928b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "462a4f13-79df-40a7-cf99-2eaae18b928b"
       },
       "source": [
         "assert premiere_occurrence(10, [15,10,13,10,8,15,10]) == 1\n",
@@ -416,10 +416,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "p5IdjOhQozD0",
-        "outputId": "bcac80cf-9df8-4636-dbe3-af5041680630",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "bcac80cf-9df8-4636-dbe3-af5041680630"
       },
       "source": [
         "assert plus_long_mot(['chien', 'chat', 'tortue', 'éléphant', 'lion']) == 'éléphant'\n",
@@ -470,16 +470,26 @@
         "    alors la fonction renvoie celui qui arrive en DERNIER dans le tableau\n",
         "    -si le tableau est vide, alors la fonction renvoie la chaîne vide  ''\n",
         "    \"\"\"\n",
-        "    \n",
-        "    return"
+        "    if len(t)==0: return ''\n",
+        "    len_max=len(t[0])\n",
+        "    max=t[0]\n",
+        "    for i in range(len(t)):\n",
+        "        if len(t[i])>=len_max:\n",
+        "            len_max=len(t[i])\n",
+        "            max=t[i]\n",
+        "    return max"
       ],
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Au_c1LSLqzg8"
+        "id": "Au_c1LSLqzg8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "acc4c128-7012-49f6-b195-159a8695bf00"
       },
       "source": [
         "assert dernier_plus_long_mot(['chien', 'chat', 'tortue', 'éléphant', 'lion']) == 'éléphant'\n",
@@ -487,8 +497,16 @@
         "assert dernier_plus_long_mot([]) == ''\n",
         "print('tests ok')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "tests ok\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
